syntax ="proto3";
package echo;
import "google/api/annotations.proto";
option go_package =".;proto";
message EchoRequest{
    string message=1;
}
message EchoResponse{
    string message=1;
}
service Echo{
    rpc UnaryEcho (EchoRequest) returns (EchoResponse){
        option (google.api.http)={ //以post的方式支持http的方法
            post:"/v1/example/echo"
            body:"*"
        };
    }
    // 客户端流式
    rpc ClientStreamingEcho ( stream EchoRequest) returns ( EchoResponse){

    }
    // 服务端流式
    rpc ServerStreamingEcho(EchoRequest) returns(stream EchoResponse){

    }
    rpc BidirectionalStreamingEcho(stream EchoRequest) returns(stream EchoResponse){}
    


}